<resources>
    <string name="app_name">Szene</string>
    <string name="general_ok">Ok</string>
    <string name="cancel">Cancelar</string>
    <string name="white" />
    <string name="isFavourite">Añadido a mi lista</string>
    <string name="state">Estado: </string>
    <string name="refill_data">Rellene  los datos</string>

    <!-- Bundle Keys -->
    <string name="bundle_email">correo</string>
    <string name="bundle_film">mandar movie</string>

    <!-- Layout login text -->
    <string name="layout_email">Escriba su correo</string>
    <string name="layout_name">Escriba su nombre</string>
    <string name="layout_pswd">Escriba su contraseña</string>
    <string name="layout_create_bt">Crear usuario</string>
    <string name="layout_create_tv">Rellene los \n campos</string>
    <string name="layout_login_tv">Bienvenido</string>
    <string name="layout_login_btAccess">Iniciar sesión</string>
    <string name="layout_login_btNew">Crear cuenta</string>
    <string name="layout_details_btFavPlus">Añadir a favoritos</string>
    <string name="layout_details_btFavQuit">Quitar de favoritos</string>

    <!-- Error/Warning texts -->
    <string name="error_type">Error</string>
    <string name="warning_type">Advertencia</string>
    <string name="error_msg_login">No se ha podido comprobar al usuario con las credenciales escritas, revise sus credenciales</string>
    <string name="error_msg_register">No se ha podido registrar al usuario, compruebe que las credenciales escritas cumplen con lo mínimo</string>
    <string name="error_msg_fav_film">No se ha podido añadir a su lista</string>
    <string name="warning_msg_plus_fav">¿Está seguro que quiere añadir esta película a la lista?</string>
    <string name="warning_msg_minus_fav">¿Está seguro que quiere quitar esta película de su lista de favoritos?</string>


    <string name="error_name_empty">El nombre no puede estar vacío</string>
    <string name="error_email_empty">El correo no puede estar vacío</string>
    <string name="error_email_invalid">El correo no es válido</string>
    <string name="error_password_short">La contraseña debe tener al menos 6 caracteres</string>
    <string name="error_password_empty">La contraseña no puede estar vacía</string>




    <!-- Other texts -->
    <string name="popularity">popularity</string>
    <string name="release_date">release_date</string>
    <string name="ascender">.asc</string>
    <string name="descender">.desc</string>

    <string name="films">Peliculas</string>
    <string name="campo_error">Rellene este campo</string>
    <string name="sesion">Sesion</string>
    <string name="search">Búsqueda</string>
    <string name="search_normal">Búsqueda</string>
    <string name="apply_filters">Aplicar filtros seleccionados</string>
    <string name="reset_filters">Limpiar filtros</string>
    <string name="search_movie">Buscar película</string>
    <string name="director_points">Director:</string>
    <string name="screenwriter_points">Guionista:</string>
    <string name="director">Director</string>
    <string name="writer">Writer</string>
    <string name="screenplay">Screenplay</string>
    <string name="screenwriter">Guionista</string>
    <string name="genres">Género:</string>
    <string name="categories">Categorias</string>
    <string name="release_date_text">Fecha de salida</string>
    <string name="line">-</string>
    <string name="order_by">Ordenar por</string>
    <string name="popularity_title">Popularidad</string>
    <string name="release_date_title">Fecha lanzamiento</string>
    <string name="ascendent_title">Ascendente</string>
    <string name="downgrade_title">Descendente</string>
    <string name="cast">Reparto:</string>
    <string name="genres_text_details">Genero(s):</string>
    <string name="now_playing_title">Cartelera</string>
    <string name="top_title">Top 100</string>
    <string name="search_title">Búsqueda</string>
    <string name="favorites_title">Mi lista</string>
    <string name="profile_title">Perfil</string>
    <string name="error_message_general">Correo o contraseña incorrectos.</string>
    <string name="error_message_create">No se pudo registrar el usuario.</string>
    <string name="error_message_login">Error al iniciar sesión.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="api_error_get_films_filter">No se pudo recuperar la lista de peliculas</string>
    <string name="api_error_get_films_query">No se pudo recuperar la lista buscada</string>
    <string name="api_error_get_genres">No se pudo recuperar la lista de generos de la api</string>
    <string name="valoration_text">¿Quiere dejar una valoración?</string>
    <string name="write_resume">Escribe tu reseña</string>
    <string name="resume_text">¿Quiere dejar una reseña?</string>
    <string name="clean_filters">Limpiar filtros</string>
    <string name="go_back"> Volver</string>
    <string name="search_movie_text">Buscar película</string>
    <string name="filter_now_playing_films">Buscar</string>
    <string name="filter_personal_list">Filtrar peliculas valoradas</string>
    <string name="films_watched">Películas vistas</string>
    <string name="average_valoration">Valoración media</string>
    <string name="logout">Cerrar sesión</string>
    <string name="edit">Editar campos</string>
    <string name="insert_new_review">Inserte la nueva review</string>
    <string name="confirm_changes">Confirmar cambios</string>

</resources>