<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/now_playing_title"
        android:id="@+id/btNowPlaying"
        android:icon="@drawable/now_playing_icon"/>
    <item
        android:title="@string/top_title"
        android:id="@+id/btTop"
        android:icon="@drawable/top_icon"/>

    <item
        android:title="@string/search_title"
        android:id="@+id/btSearch"
        android:icon="@drawable/search_icon"/>

    <item
        android:title="@string/favorites_title"
        android:id="@+id/btFavorites"
        android:icon="@drawable/heart_icon" />


    <item
        android:title="@string/profile_title"
        android:id="@+id/btProfile"
        android:icon="@drawable/profile_icon"/>

</menu>