<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".classes.modules.auth.login.view.LoginFragment"
    style="@style/vertical_general_linearlayout">

    <TextView
        style="@style/white_bolded_center_title"
        android:text="@string/layout_login_tv"
        android:layout_marginTop="20dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"
        />

    <TextView
        style="@style/white_large_general_textview"
        android:text="@string/layout_email"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.TextInputLayout.FilledBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailLog"
            style="@style/authuser_edittext"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        />

    <TextView
        style="@style/white_large_general_textview"
        android:text="@string/layout_pswd"
        android:layout_marginBottom="5dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.TextInputLayout.FilledBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPswdLog"
            style="@style/authuser_password_edittext" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:weightSum="2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btAccessLg"
            style="@style/login_buttons"
            android:text="@string/layout_login_btAccess"
            />
        <Space
            android:layout_width="3dp"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btNewAccount"
            style="@style/login_buttons"
            android:text="@string/layout_login_btNew"
            />


    </LinearLayout>

</LinearLayout>