<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            style="@style/large_bolded_textview_general"
            android:layout_marginVertical="12dp"
            />

        <com.example.myapplication.classes.components.MyCustomChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chipGroupFilters"
            android:padding="16dp"
            app:chipSpacing="8dp"
            app:singleSelection="false"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date_text"
            style="@style/large_bolded_textview_general"
            android:layout_marginVertical="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingHorizontal="5dp">

            <EditText
                android:id="@+id/etStartDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                style="@style/medium_date_edittext"
                />

            <ImageButton
                android:id="@+id/btCalendarStart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.07"
                android:src="@drawable/calendar"
                android:layout_marginStart="5dp"
                />


            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="wrap_content"
                android:text="@string/line"
                android:textSize="60sp"
                android:layout_marginHorizontal="8dp"
                android:textAlignment="center"
                />
            <EditText
                android:id="@+id/etEndDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                style="@style/medium_date_edittext"
                />

            <ImageButton
                android:id="@+id/btCalendarEnd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.07"
                android:src="@drawable/calendar"
                android:layout_marginStart="5dp"
                />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_by"
            style="@style/large_bolded_textview_general"
            android:layout_marginVertical="10dp"
            />

        <LinearLayout
            style="@style/horizontal_widthparent_linearlayout"
            android:gravity="center"
            android:paddingHorizontal="2dp">

            <com.example.myapplication.classes.components.MyCustomChipGroup
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:id="@+id/chipGroupOrder"
                android:padding="16dp"
                app:chipSpacing="8dp"
                app:singleSelection="true"
                android:layout_gravity="center_horizontal">

                <com.example.myapplication.classes.components.MyCustomChip
                    android:id="@+id/chipPop"
                    style="@style/one_selection_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popularity_title"/>

                <com.example.myapplication.classes.components.MyCustomChip
                    android:id="@+id/chipDate"
                    style="@style/one_selection_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date_title"/>

            </com.example.myapplication.classes.components.MyCustomChipGroup>

            <com.example.myapplication.classes.components.MyCustomChipGroup
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="wrap_content"
                android:id="@+id/chipGroupHighLow"
                android:padding="16dp"
                app:chipSpacing="8dp"
                app:singleSelection="true"
                android:layout_gravity="center_horizontal">

                <com.example.myapplication.classes.components.MyCustomChip
                    android:id="@+id/chipAsc"
                    style="@style/one_selection_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ascendent_title"/>

                <com.example.myapplication.classes.components.MyCustomChip
                    android:id="@+id/chipDesc"
                    style="@style/one_selection_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/downgrade_title"/>

            </com.example.myapplication.classes.components.MyCustomChipGroup>

        </LinearLayout>

        <LinearLayout
            style="@style/horizontal_widthparent_linearlayout"
            android:gravity="end">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btReset"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/reset_filters"
                style="@style/large_bluegray_rounded_button"
                android:layout_gravity="center"
                />
            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btFilters"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/apply_filters"
                style="@style/large_bluegray_rounded_button"
                android:layout_gravity="center"
                />

        </LinearLayout>
    </LinearLayout>
</ScrollView>

