<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".classes.modules.auth.register.view.RegisterFragment"
    android:gravity="center"
    android:textAlignment="center"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/tvTitleRegister"
        style="@style/white_bolded_center_title"
        android:text="@string/refill_data"
        android:layout_marginTop="20dp"
        />
    <Space
        android:layout_width="wrap_content"
        android:layout_height="30dp"/>

    <TextView
        style="@style/white_large_general_textview"
        android:text="@string/layout_name"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="5dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:paddingStart="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNewName"
            style="@style/authuser_edittext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="30dp"/>

    <TextView
        style="@style/white_large_general_textview"
        android:text="@string/layout_email"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="5dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:paddingStart="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNewEmail"
            style="@style/authuser_edittext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="30dp"/>


    <TextView
        style="@style/white_large_general_textview"
        android:text="@string/layout_pswd"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="40dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:paddingStart="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNewPswd"
            style="@style/authuser_password_edittext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btAccessNew"
        style="@style/login_large_buttons"
        android:text="@string/layout_create_bt"
        android:layout_marginTop="30dp"
        />


</LinearLayout>