<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".classes.modules.main.activity.view.ConfirmationFragment"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvExplicationQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/large_bolded_textview_general"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:id="@+id/addContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvExplicationQuestion"
        app:layout_constraintVertical_bias="0.25">



        <TextView
            android:id="@+id/tvReviewRated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resume_text"
            style="@style/small_bolded_textview_general"
            android:padding="10dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutReview"
            style="@style/Widget.Material3.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/write_resume"
            android:padding="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etReview"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:minLines="5"
                android:scrollbars="vertical"
                android:textSize="13sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvStarsRated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valoration_text"
            style="@style/small_bolded_textview_general"
            android:padding="10dp"
            />

        <LinearLayout
            android:id="@+id/starContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/star1"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/not_filled_star"
                android:padding="4dp"
                android:layout_marginHorizontal="5dp"
                />

            <ImageView
                android:id="@+id/star2"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/not_filled_star"
                android:padding="4dp"
                android:layout_marginHorizontal="5dp"
                />

            <ImageView
                android:id="@+id/star3"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/not_filled_star"
                android:padding="4dp"
                android:layout_marginHorizontal="5dp"
                />

            <ImageView
                android:id="@+id/star4"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/not_filled_star"
                android:padding="4dp"
                android:layout_marginHorizontal="5dp"
                />

            <ImageView
                android:id="@+id/star5"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/not_filled_star"
                android:padding="4dp"
                android:layout_marginHorizontal="5dp"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/addContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btClearValoration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightBlue"
            android:textColor="@color/white"
            android:text="@string/clean_filters"
            />
        <Button
            android:id="@+id/btNotErase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightBlue"
            android:textColor="@color/white"
            android:text="@string/go_back"
            />
        <Button
            android:id="@+id/btAddValoration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightBlue"
            android:textColor="@color/white"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>